# filelock-lts

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish-lts.yml  publish.yml
filelock/: filelock_security_fix.diff
src/filelock/: _unix.py  version.py
