[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filelock-lts-py311"
version = "2025.68146"
description = "filelock LTS tracker for Python 3.11 (redirects to official filelock >= 3.20.1)"
requires-python = ">=3.11, <3.12"
license = {text = "Unlicense"}
readme = "README.md"
dependencies = ["filelock>=3.20.1"]

[project.urls]
Homepage = "https://github.com/1minds3t/filelock-lts"
