[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filelock-lts-py37"
version = "2025.68146.1"
description = "Python 3.7 filelock with CVE-2025-68146 security patch (symlink attack prevention via O_NOFOLLOW)"
requires-python = ">=3.7, <3.8"
license = {text = "Unlicense"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Topic :: Security",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/1minds3t/filelock-lts"
"CVE Details" = "https://nvd.nist.gov/vuln/detail/CVE-2025-68146"
"Source" = "https://github.com/1minds3t/filelock-lts/tree/py3.7"
